; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcclibs/libmudflap/extr_mf-runtime.c___mf_unregister.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcclibs/libmudflap/extr_mf-runtime.c___mf_unregister.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @__mf_unregister(i8* %0, i64 %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i64 %1, i64* %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = call i32 (...) @LOCKTH()
  %8 = call i32 (...) @BEGIN_RECURSION_PROTECT()
  %9 = load i8*, i8** %4, align 8
  %10 = load i64, i64* %5, align 8
  %11 = load i32, i32* %6, align 4
  %12 = call i32 @__mfu_unregister(i8* %9, i64 %10, i32 %11)
  %13 = call i32 (...) @END_RECURSION_PROTECT()
  %14 = call i32 (...) @UNLOCKTH()
  ret void
}

declare dso_local i32 @LOCKTH(...) #1

declare dso_local i32 @BEGIN_RECURSION_PROTECT(...) #1

declare dso_local i32 @__mfu_unregister(i8*, i64, i32) #1

declare dso_local i32 @END_RECURSION_PROTECT(...) #1

declare dso_local i32 @UNLOCKTH(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
